# meetings-reporter

./: .gitignore  README.md  pyproject.toml
src/meetings_reporter/: __main__.py  main_cli.py  my_logger.py
src/meetings_reporter/asr_pipeline/: __init__.py  __main__.py  asr_cli.py  config.py  pipeline_constructor.py  utils.py
src/meetings_reporter/recorder/: __main__.py  rec_processes.py  recorder.py  recorder_cli.py
src/meetings_reporter/report_builder/: __init__.py  config.py  pricing.yaml  prompts.py  report_cli.py  report_constructor.py  step.py
